--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack-dev-server --mode=production",
+    "dev": "webpack-dev-server --mode=development",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
