--- a/client/package.json
+++ b/client/package.json
@@ -44,5 +44,12 @@
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6"
+  },
+  "devServer": {
+    "headers": {
+      "Access-Control-Allow-Origin": "*",
+      "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, PATCH, OPTIONS",
+      "Access-Control-Allow-Headers": "X-Requested-With, content-type, Authorization"
+    }
   }
 }
