--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "grommet": "^2.29.1",
@@ -43,6 +42,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.18.6"
+    "@babel/plugin-syntax-jsx": "^7.18.6",
+    "@playwright/test": "^1.30.0",
+    "@types/node": "^18.14.0"
   }
 }
