--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.18.6",
     "@playwright/test": "^1.30.0",
-    "@types/node": "^18.14.0"
+    "@types/node": "^18.14.0",
+    "grommet-icons": "^4.9.0"
   }
 }
