--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "chart.js": "^4.2.1",
     "grommet": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
